# MiragePot

./: .env.docker.example  .env.example  .gitignore  CHANGES.md  CODE_REVIEW_REPORT.md  DIAGNOSTIC_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS.md  WINDOWS_SSH_TROUBLESHOOTING.md  docker-compose-simple.yml  pyproject.toml  requirements.txt  test_connection.py  test_connection.sh
backend/: server.py
dashboard/: app.py
docker/: Dockerfile  Dockerfile.ollama  docker-compose.yml
docker/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
docs/: CONFIGURATION.md  DEMO_WALKTHROUGH.md  DOCKER_DEPLOYMENT.md  MONITORING.md  MVP_BASELINE.md  OFFLINE_DEPLOYMENT.md  PRD.md  QUICK_START.md  SECURITY_IMPROVEMENTS.md  SECURITY_REVIEW.md
docs/diary/: 2026-02-03.md  2026-02-08.md
grafana/dashboards/: miragepot-overview.json  miragepot-performance.json  miragepot-ttp-analysis.json
grafana/provisioning/dashboards/: miragepot.yml
grafana/provisioning/datasources/: prometheus.yml
miragepot/: __main__.py  ai_interface.py  command_handler.py  config.py  metrics.py  rate_limiter.py  server.py  ssh_interface.py
scripts/: backup.sh  deploy.sh  export-offline.sh  logs.sh  setup-grafana-dashboards.sh  test-alerts.sh  test-docker.sh  update.sh
tests/: test_command_handler.py  test_filesystem.py  test_rate_limiter.py
